<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Telenor Watchdog</string>
    <string name="action_settings">Settings</string>
    <string name="action_datausage_settings">Vis oversikt over databruk</string>
    <string name="privacy_analysis">Personvernsanalyse</string>
    <string name="applications">Dine applikasjoner</string>
    <string name="application_icon_description">Application icon</string>
    <string name="search">Søk</string>
    <string name="show_rule_violations">Vis regelbrudd</string>
    <string name="show_data_usage">Vis databruk</string>
    <string name="title_activity_data_usage">DataUsageActivity</string>
    <string name="background_label">Bakgrunn</string>
    <string name="foreground_label">Forgrunn</string>
    <string name="data_usage_label">Databruk</string>
    <string name="show_permissions">Vis tillatelser</string>
    <string name="warning_settings_datausage">Varsler</string>
    <string name="show_update_log">Vis oppdateringer</string>
    <string name="main_settings">Instillinger</string>
    <string name="removed_permissions">Følgende tillatelser ble fjernet</string>
    <string name="added_permissions">Følgende tillatelser ble lagt til</string>
    <string name="title_activity_user_question">UserQuestionActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="accept">Aksepter</string>
    <string name="decline">Avslå</string>
    <string name="app_terms_of_use">Applikasjonsvilkår</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="permission_info">Beskrivelse av risiko</string>
    <string name="main_info">Informasjon</string>
    <string name="profile_info">Informasjon</string>
    <string name="profile_tips">Tips</string>
    <string name="close">Lukk</string>
    <string name="opinion_information">Hva føler du om denne informasjonen?</string>
    <string name="show_more">Videre</string>
    <string name="recently_updated">Nylig oppdatert</string>
    <string name="installed">Installert</string>
    <string name="permissions">Tillatelser</string>
    <string name="permissions_harmony">Tillatelser</string>
    <string name="latest_update">Siste oppdatering</string>
    <string name="touch_for_more_information">Trykk for mer informasjon</string>
    <string name="touch_for_all_updates">Trykk for å se alle oppdateringer</string>

    <!--Recommender -->
    <string name="similar_apps">Like apps</string>
    <string name="replace">Erstatt</string>
    <string name="noReplacements">Det er ingen apps med lavere score</string>
    <string name="install">Installer</string>
    <string name="replacements">Dette er anbefalte erstatninger</string>
    <string name="replace_guidance">Listen over anbefalinger består av de applikasjoner Google Play Store sier ligner på den originale applikasjonen. Disse er sortert basert på profilen din.</string>
    <string name="yourProfile">Din profil</string>
    <string name="profile_details">Din profil er basert på alle applikasjoner som er på telefonen. Denne viser hvilke tillatelser du synes er grei å ha i en applikasjon. Profilen din er lagret på telefonen og vil ikke bli delt med andre</string>


    <string name="uninstall_btn_text">Avinstaller applikasjon</string>
    <string name="harmony_apps">Disharmoni</string>
    <string name="harmony_dialog_feedback_text">Du har gitt følgende tilbakemeldinger</string>

    <!--Tips -->
    <string name="tips_screen_lock">For å ytterligere øke sikkerheten på telefonen kan du aktivere skjermlås. Dette hindrer fri adgang til telefonen hvis du skulle miste den.</string>

    <string name="lorum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam vel lectus non enim iaculis sodales. Nunc quis varius nulla. Nullam molestie vitae orci in congue.</string>
    <string name="risk_indicators">Risikoindikatorer</string>
    <string name="updates">Oppdateringer</string>
    <string name="no_required_app_permissions">Ingen tillatelser</string>
    <string name="for_more_permission_info_touch">For mer informasjon om tillatelser, trykk på</string>
    <string name="no_app_risk_indikators">Ingen risikoindikatorer</string>
    <string name="for_more_risk_indicator_info_touch">For mer informasjon om risikoindikatorer, trykk på</string>
    <string name="risk_score_description">Risikofaktoren regnes ut hovedsaklig basert på hvilke tillatelser applikasjonen krever. En tillatelse som utgjør en høy risiko for ditt personvern vil veie høyere enn en tillatelse med lav risiko. Hvis en eller flere risikoindikatorer blir funnet vil dette øke den totale risikofaktoren.</string>
    <string name="questions_risk_score_description">På enkelte applikasjoner ønsker vi din tilbakemelding på hva du føler om funksjonalitet som kan forekomme i applikasjonen. Din tilbakemelding her vil påvirke risikofaktoren med en redusering hvis tilbakemeldingen er et smilefjes, eller en økning ved et surt fjes.</string>
    <string name="risk_score">Risikofaktor</string>
    <string name="your_feedback_counts">Din tilbakemelding teller!</string>
    <string name="permission_risk_high_description">Høy risiko for ditt personvern. En tillatelse i denne kategorien gir tilgang til å få ta i personlig informasjon om deg og dine kontakter, overvåke deg med telefonens sensorer eller sende data fra din telefon under ditt navn.</string>
    <string name="permission_risk_medium_description">Medium risiko for ditt personvern. En tillatelse i denne kategorien vil ikke gi tilgang til tilgang til personlig informasjon, men kan typisk få vite hvordan du bruker din telefon (f.eks. hvilke nettverk du er koblet til og se din nettleserhistore)</string>
    <string name="permission_risk_low_description">Lav risiko for ditt personvern. En tillatelse i denne kategorien vil ikke gi tilgang til data som kan bryte ditt personvern alene.</string>
    <string name="risk_indicators_description">En tillatelse er ikke nødvendigvis farlig for ditt personvern alene, men om den kombineres den med andre tillatelser kan de sammen utgjøre en betydelig risiko. Risikoindikatorer forebygger dette ved å analysere alle applikasjonens tillatelser og lete etter mønster som indikerer farlig adferd.</string>
    <string name="delete_answers_text">Slett besvarelser</string>

    <!-- User behavior feedback -->
    <string name="card_install_trend_positive">Det har vært en økning av risikofylte applikasjoner installert på telefonen. Dette har medført en økt total risikofaktor.</string>
    <string name="card_install_trend_negative">Det har vært en nedgang av risikofylte applikasjoner installert telefonen. Dette har medført en lavere risikofaktor. </string>
    <string name="card_install_trend_fixed_high">Det er høy risikofaktor på de installerte applikasjonene på telefonen.</string>
    <string name="card_install_trend_fixed_low">Det er lav riskofaktor på de siste installerte applikasjonene på telefonen.</string>
    <string name="card_install_trend_neutral">Ingen installerte applikasjoner registrert. Her vil det komme informasjon ditt trender i ditt installeringssmønster.</string>

    <!-- User behavior feedback -->
    <string name="card_uninstall_trend_positive">Det har vært en økning i avinstalleringer av risikofylte applikasjoner på telefonen. Dette har medført en lavere total risikofaktor.</string>
    <string name="card_uninstall_trend_negative">Ingen nylige avinstallerte applikasjoner av betydning registrert.</string>
    <string name="card_uninstall_trend_neutral">Ingen avinstalleringer registert. Her vil det komme informasjon ditt trender i ditt avinstalleringsmønster.</string>

    <string name="card_disharmony_neutral">Ingen disharmoni for øyeblikket. Her vil det komme informasjon om applikasjoner som ikke passer dine preferanser.  </string>

    <string name="card_updates_no">Ingen nylig oppdaterte applikasjoner. Her vil det komme informasjon om noen av dine applikasjoner har blitt oppdatert.</string>
    <string name="show_filtered_applications">Vis filtrerte applikasjoner</string>
    <string name="show_filteres_applications_count">Vis %d applikasjoner</string>
    <string name="search_guidance">Filtrer dine innstallerte applikasjoner etter risikofaktor og/eller tillatelser</string>
    <string name="risk_factor_high">Høy risikofaktor</string>
    <string name="risk_factor_medium">Medium risikofaktor</string>
    <string name="risk_factor_low">Lav risikofaktor</string>

    <string name="go_to_app">Gå til app</string>

    <!-- Dialog main-->
    <string name="dialog_main_score_header">Total risikofaktor</string>
    <string name="dialog_main_score_text">Total risikofaktore er gjennomsnittet av risikofaktoren samlet fra alle installerte applikasjoner, og er ment som et totalt bilde på nåværende trusselnivå. </string>
    <string name="dialog_main_cards_header">Trender og bruksmønster</string>
    <string name="dialog_main_cards_text">Trendene og bruksmønstre bruker informasjon fra ditt installerings- og avinstalleringsmønster og besvarelser på spørsmål rettet mot tillateser for å gi deg informasjon som kan være nyttig. Disse vil kontinuerlig oppdatere seg etter som du bruker telefonen. </string>
    <string name="dialog_main_color_codes_header">Fargekoder</string>
    <string name="dialog_main_color_codes_text">Fargekodene indikerer alvorlighetsgraden til hendelsene som blir presentert.</string>

    <string name="application_guidance">Listen over dine applikasjoner består av de applikasjoner du selv har lastet ned. Applikasjoner som fulgte med din applikasjon, såkalte systemapplikasjoner, vil ikke vises i denne listen.</string>
    <string name="filer_applications">Du kan filtere applikasjonene</string>
    <string name="application_filtering_guidance">Du kan filtere listen over dine applikasjoner etter risikofaktor og/eller tillatelser ved å trykke på forstørrelsesglasset.</string>
    <string name="indicators">Indikatorer</string>
    <string name="indicator_new_risk_score">Indikerer at risikofaktoren til applikasjonen har endret seg etter siste oppdatering.</string>
    <string name="indicator_questions">Indikerer at denne applikasjonen venter på din gjennomgang og besvarelse på spørsmål knyttet til dens funksjonalitet.</string>
    <string name="remove_all">Fjern alle</string>
    <string name="no_matches">Ingen treff</string>
    <string name="touch_to_uninstall">Trykk her for å avinstallere %s</string>
    <string name="title_activity_disharmony">Disharmoniske apper</string>
    <string name="title_activity_behavior_application_list">Disharmoniske apper</string>

    <!-- Dialog behavior-->
    <string name="disharmony_sad_text">Misfornøyd med </string>
    <string name="disharmony_neutral_text">Nøytral til</string>
    <string name="dialog_behavior_info_header">Disharmoni</string>
    <string name="dialog_behavior_info_text">Disharmoniske applikasjoner har tillatelser du har stilt deg negativt til. Hvis du viser sterkt misnøye mot en applikasjons tillatelser bør du revurdere om du ønsker å ha den installert på telefonen.</string>
</resources>
