<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10sp"
    android:gravity="center">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/dialog_header"
        android:textColor="@color/text_primary"
        android:layout_margin="5sp"
        android:text="@string/dialog_main_score_header"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5sp"
        android:textSize="@dimen/dialog_text"
        android:textColor="@color/text_secondary"
        android:text="@string/dialog_main_score_text"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/dialog_header"
        android:textColor="@color/text_primary"
        android:layout_margin="5sp"
        android:text="@string/dialog_main_cards_header"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5sp"
        android:textSize="@dimen/dialog_text"
        android:textColor="@color/text_secondary"
        android:text="@string/dialog_main_cards_text"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/dialog_header"
        android:textColor="@color/text_primary"
        android:layout_margin="5sp"
        android:text="@string/dialog_main_color_codes_header"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5sp"
        android:textSize="@dimen/dialog_text"
        android:textColor="@color/text_secondary"
        android:text="@string/dialog_main_color_codes_text"/>

</LinearLayout>