<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10sp">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/replacements"
        android:textSize="@dimen/dialog_header"
        android:padding="5sp"
        android:textColor="@color/text_primary"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/dialog_text"
        android:textColor="@color/text_secondary"
        android:padding="5sp"
        android:text="@string/application_guidance"/>


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/yourProfile"
        android:textSize="@dimen/dialog_header"
        android:padding="5sp"
        android:textColor="@color/text_primary"/>


        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dialog_text"
            android:textColor="@color/text_secondary"
            android:layout_marginLeft="5sp"
            android:text="@string/profile_details"/>


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/indicators"
        android:padding="5sp"
        android:textSize="@dimen/dialog_header"
        android:textColor="@color/text_primary"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5sp"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:src="@mipmap/ic_warning_black_48dp"
            android:layout_margin="5sp"
            android:tint="@color/text_secondary"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dialog_text"
            android:textColor="@color/text_secondary"
            android:layout_marginLeft="5sp"
            android:text="@string/indicator_new_risk_score"/>
    </LinearLayout>



</LinearLayout>