<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_search_popup">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="10sp">

        <ImageView
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:layout_marginBottom="10sp"
            android:tint="@color/text_primary"
            android:src="@drawable/abc_ic_search_api_mtrl_alpha"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_guidance"
            android:textSize="@dimen/dialog_text"
            android:textColor="@color/text_secondary"
            android:gravity="center" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1sp"
        android:layout_marginLeft="25sp"
        android:layout_marginRight="25sp"
        android:layout_marginTop="5sp"
        android:layout_marginBottom="5sp"
        android:background="@color/text_primary" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0sp"
        android:layout_weight="1"
        android:padding="10sp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dialog_header"
                android:textColor="@color/text_primary"
                android:text="@string/risk_score" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10sp">

                <CheckBox
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_secondary"
                    android:text="@string/risk_factor_high" />

                <CheckBox
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_secondary"
                    android:text="@string/risk_factor_medium" />

                <CheckBox
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_secondary"
                    android:text="@string/risk_factor_low" />
            </LinearLayout>


            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dialog_header"
                android:textColor="@color/text_primary"
                android:text="@string/permissions" />

        <LinearLayout
            android:id="@+id/search_popup_permission_checkbox_wrapper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10sp">

            </LinearLayout>

        </LinearLayout>


    </ScrollView>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5sp"
        android:text="@string/show_filtered_applications" />

</LinearLayout>