<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10sp"
        android:text="@string/permission_info"
        android:textColor="@color/text_primary"
        android:textSize="@dimen/dialog_header" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="20sp"
            android:layout_height="fill_parent"
            android:background="@color/risk_red" />

        <TextView
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5sp"
            android:text="@string/permission_risk_high_description"
            android:textColor="@color/text_secondary"
            android:textSize="@dimen/dialog_text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5sp"
        android:layout_marginTop="5sp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="20sp"
            android:layout_height="fill_parent"
            android:background="@color/risk_yellow" />

        <TextView
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5sp"
            android:text="@string/permission_risk_medium_description"
            android:textColor="@color/text_secondary"
            android:textSize="@dimen/dialog_text" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="20sp"
            android:layout_height="fill_parent"
            android:background="@color/risk_green" />

        <TextView
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5sp"
            android:text="@string/permission_risk_low_description"
            android:textColor="@color/text_secondary"
            android:textSize="@dimen/dialog_text" />

    </LinearLayout>


</LinearLayout>